--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -237,7 +237,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-03-07 14:53:48
+// updated on 2017-03-14 01:21:49
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -727,6 +727,7 @@ DOMAIN-SUFFIX,recaptcha.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redhotlabs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,registry.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,schema.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shattered.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sipml5.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stories.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,synergyse.com,Proxy,force-remote-dns
@@ -2133,6 +2134,7 @@ DOMAIN-SUFFIX,gohappy.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gokbayrak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldbet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldbetsports.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,goldeneyevault.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldenfrog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldstep.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldwave.com,Proxy,force-remote-dns
@@ -2267,6 +2269,7 @@ DOMAIN-SUFFIX,getsmartlinks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,git-scm.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heqinglian.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heungkongdiscuss.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hexieshe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hexxeh.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,app.heywire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heyzo.com,Proxy,force-remote-dns
@@ -3374,7 +3377,9 @@ DOMAIN-SUFFIX,picturedip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,picturesocial.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pin6.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ping.fm,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pinoy-n.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piposay.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piraattilahti.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piring.com,Proxy,force-remote-dns
@@ -3577,6 +3582,7 @@ DOMAIN-SUFFIX,renyurenquan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,certificate.revocationcheck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,subacme.rerouted.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,reuters.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,reutersmedia.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,revleft.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,retweetist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,retweetrank.com,Proxy,force-remote-dns
