--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -34,7 +34,7 @@ DOMAIN-SUFFIX,tw,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-04-23 22:32:49
+// updated on 2017-05-04 09:20:12
 
 DOMAIN-SUFFIX,ad.video.51togic.com,REJECT
 DOMAIN-SUFFIX,shrek.6.cn,REJECT
@@ -62,6 +62,8 @@ DOMAIN-SUFFIX,dc.letv.com,REJECT
 DOMAIN-SUFFIX,dev.dc.letv.com,REJECT
 DOMAIN-SUFFIX,fz.letv.com,REJECT
 DOMAIN-SUFFIX,g3.letv.com,REJECT
+DOMAIN-SUFFIX,letv.allyes.com,REJECT
+DOMAIN-SUFFIX,letv.irs01.com,REJECT
 DOMAIN-SUFFIX,minisite.letv.com,REJECT
 DOMAIN-SUFFIX,msg.m.letv.com,REJECT
 DOMAIN-SUFFIX,n.mark.letv.com,REJECT
@@ -101,20 +103,31 @@ DOMAIN-SUFFIX,biz5.kankan.com,REJECT
 DOMAIN-SUFFIX,float.kankan.com,REJECT
 DOMAIN-SUFFIX,logic.cpm.cm.kankan.com,REJECT
 DOMAIN-SUFFIX,actives.youku.com,REJECT
+DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.api.3g.youku.com,REJECT
 DOMAIN-SUFFIX,ad.mobile.youku.com,REJECT
+DOMAIN-SUFFIX,adcontrol.tudou.com,REJECT
+DOMAIN-SUFFIX,adplay.tudou.com,REJECT
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN-SUFFIX,c.yes.youku.com,REJECT
+DOMAIN-SUFFIX,e.stat.ykimg.com,REJECT
+DOMAIN-SUFFIX,hudong.pl.youku.com,REJECT
+DOMAIN-SUFFIX,hz.youku.com,REJECT
 DOMAIN-SUFFIX,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,l.youku.com,REJECT
 DOMAIN-SUFFIX,lstat.youku.com,REJECT
 DOMAIN-SUFFIX,lvip.youku.com,REJECT
+DOMAIN-SUFFIX,msg.youku.com,REJECT
 DOMAIN-SUFFIX,p.l.ykimg.com,REJECT
 DOMAIN-SUFFIX,p.l.youku.com,REJECT
 DOMAIN-SUFFIX,p-log.ykimg.com,REJECT
 DOMAIN-SUFFIX,r.l.youku.com,REJECT
+DOMAIN-SUFFIX,stat.tudou.com,REJECT
 DOMAIN-SUFFIX,stat.youku.com,REJECT
 DOMAIN-SUFFIX,static.lstat.youku.com,REJECT
+DOMAIN-SUFFIX,stats.tudou.com,REJECT
+DOMAIN-SUFFIX,v.l.youku.com,REJECT
+DOMAIN-SUFFIX,ykatr.youku.com,REJECT
 DOMAIN-SUFFIX,ads.youtube.com,REJECT
 DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
 DOMAIN-SUFFIX,couchcoaster.jp,REJECT
@@ -164,6 +177,7 @@ DOMAIN-SUFFIX,analytics.hz.netease.com,REJECT
 DOMAIN-SUFFIX,analytics.ws.126.net,REJECT
 DOMAIN-SUFFIX,b.bst.126.net,REJECT
 DOMAIN-SUFFIX,bobo.163.com,REJECT
+DOMAIN-SUFFIX,c.youdao.com,REJECT
 DOMAIN-SUFFIX,clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,conv.youdao.com,REJECT
 DOMAIN-SUFFIX,crashlytics.163.com,REJECT
@@ -177,7 +191,6 @@ DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
 DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
-DOMAIN-SUFFIX,impservice-test.dictapp.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dict.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictapp.youdao.com,REJECT
@@ -185,7 +198,9 @@ DOMAIN-SUFFIX,impservice.dictvista.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictweb.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictword.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.mail.youdao.com,REJECT
+DOMAIN-SUFFIX,impservice.union.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice2.youdao.com,REJECT
+DOMAIN-SUFFIX,impservicetest.dictapp.youdao.com,REJECT
 DOMAIN-SUFFIX,ir.mail.163.com,REJECT
 DOMAIN-SUFFIX,irpmt.mail.163.com,REJECT
 DOMAIN-SUFFIX,mimg.126.net,REJECT
@@ -203,6 +218,7 @@ DOMAIN-SUFFIX,qt002x.corp.youdao.com,REJECT
 DOMAIN-SUFFIX,r.mail.163.com,REJECT
 DOMAIN-SUFFIX,rd.da.netease.com,REJECT
 DOMAIN-SUFFIX,rlogs.youdao.com,REJECT
+DOMAIN-SUFFIX,shared.youdao.com,REJECT
 DOMAIN-SUFFIX,stat.ws.126.net,REJECT
 DOMAIN-SUFFIX,static.flv.uuzuonline.com,REJECT
 DOMAIN-SUFFIX,statis.push.netease.com,REJECT
@@ -268,6 +284,7 @@ DOMAIN-SUFFIX,58.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,brandshow.58.com,REJECT
 DOMAIN-SUFFIX,imp.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,jing.58.com,REJECT
+DOMAIN-SUFFIX,jump.luna.58.com,REJECT
 DOMAIN-SUFFIX,stat.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,track.58.com,REJECT
 DOMAIN-SUFFIX,adhome.1fangchan.com,REJECT
@@ -967,7 +984,6 @@ DOMAIN-SUFFIX,95105012.com,REJECT
 DOMAIN-SUFFIX,990km.com,REJECT
 DOMAIN-SUFFIX,aac-dmp.cn,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
-DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.thsi.cn,REJECT
 DOMAIN-SUFFIX,ad.unimhk.com,REJECT
 DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
@@ -978,7 +994,6 @@ DOMAIN-SUFFIX,adcdn.hatena.ne.jp,REJECT
 DOMAIN-SUFFIX,adchina.com,REJECT
 DOMAIN-SUFFIX,adcolony.com,REJECT
 DOMAIN-SUFFIX,adcome.cn,REJECT
-DOMAIN-SUFFIX,adcontrol.tudou.com,REJECT
 DOMAIN-SUFFIX,adeventtracker.spotify.com,REJECT
 DOMAIN-SUFFIX,adhouyi.com,REJECT
 DOMAIN-SUFFIX,adinall.com,REJECT
@@ -998,7 +1013,6 @@ DOMAIN-SUFFIX,admx.baixing.com,REJECT
 DOMAIN-SUFFIX,adnetworkperformance.com,REJECT
 DOMAIN-SUFFIX,adnxs.com,REJECT
 DOMAIN-SUFFIX,adofthyear.com,REJECT
-DOMAIN-SUFFIX,adplay.tudou.com,REJECT
 DOMAIN-SUFFIX,ad-plus.cn,REJECT
 DOMAIN-SUFFIX,adpro.cn,REJECT
 DOMAIN-SUFFIX,adroll.com,REJECT
@@ -1034,7 +1048,6 @@ DOMAIN-SUFFIX,all.rising.com.cn,REJECT
 DOMAIN-SUFFIX,alllget.com,REJECT
 DOMAIN-SUFFIX,allyes.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,ampproject.org,REJECT
 DOMAIN-SUFFIX,analytics.163.com,REJECT
 DOMAIN-SUFFIX,analytics.techweb.com.cn,REJECT
 DOMAIN-SUFFIX,analytics-union.xunlei.com,REJECT
@@ -1078,7 +1091,6 @@ DOMAIN-SUFFIX,bs.da.hunantv.com,REJECT
 DOMAIN-SUFFIX,bxb.oupeng.com,REJECT
 DOMAIN-SUFFIX,bytedance.com,REJECT
 DOMAIN-SUFFIX,c.ns8d.com,REJECT
-DOMAIN-SUFFIX,c.youdao.com,REJECT
 DOMAIN-SUFFIX,c0563.com,REJECT
 DOMAIN-SUFFIX,c5.72zx.com,REJECT
 DOMAIN-SUFFIX,capp.simsimi.com,REJECT
@@ -1098,8 +1110,7 @@ DOMAIN-SUFFIX,cmcm.com,REJECT
 DOMAIN-SUFFIX,cmcore.com,REJECT
 DOMAIN-SUFFIX,cms.laifeng.com,REJECT
 DOMAIN-SUFFIX,cn.wifi.com,REJECT
-DOMAIN-SUFFIX,cnzz.com,REJECT
-DOMAIN-SUFFIX,cnzz.net,REJECT
+DOMAIN-SUFFIX,cnzzlink.com,REJECT
 DOMAIN-SUFFIX,cocounion.com,REJECT
 DOMAIN-SUFFIX,collect.tianya.cn,REJECT
 DOMAIN-SUFFIX,colorfulapp.com,REJECT
@@ -1118,6 +1129,7 @@ DOMAIN-SUFFIX,cps.laifeng.com,REJECT
 DOMAIN-SUFFIX,csbew.com,REJECT
 DOMAIN-SUFFIX,ctsywy.com,REJECT
 DOMAIN-SUFFIX,cywl5.com,REJECT
+DOMAIN-SUFFIX,czxiangyue.com,REJECT
 DOMAIN-SUFFIX,d31qbv1cthcecs.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d3rt1990lpmkn.cloudfront.com,REJECT
 DOMAIN-SUFFIX,dap.gentags.net,REJECT
@@ -1156,6 +1168,7 @@ DOMAIN-SUFFIX,file.ws.126.net,REJECT
 DOMAIN-SUFFIX,findjapan.cn,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,forjs.net,REJECT
+DOMAIN-SUFFIX,fqtra.com,REJECT
 DOMAIN-SUFFIX,fsf.org,REJECT
 DOMAIN-SUFFIX,fugetech.com,REJECT
 DOMAIN-SUFFIX,g.q4ik.com,REJECT
@@ -1192,6 +1205,7 @@ DOMAIN-SUFFIX,huimee.net,REJECT
 DOMAIN-SUFFIX,hwcdn.net,REJECT
 DOMAIN-SUFFIX,hxadt.com,REJECT
 DOMAIN-SUFFIX,hxsame.hexun.com,REJECT
+DOMAIN-SUFFIX,hxspc.com,REJECT
 DOMAIN-SUFFIX,hytgj.com,REJECT
 DOMAIN-SUFFIX,hzkcbs.com,REJECT
 DOMAIN-SUFFIX,i8.com.cn,REJECT
@@ -1219,7 +1233,6 @@ DOMAIN-SUFFIX,img.ujian.cc,REJECT
 DOMAIN-SUFFIX,immob.cn,REJECT
 DOMAIN-SUFFIX,imochy.com,REJECT
 DOMAIN-SUFFIX,impact.applifier.com,REJECT
-DOMAIN-SUFFIX,impservice.union.youdao.com,REJECT
 DOMAIN-SUFFIX,im-x.jd.com,REJECT
 DOMAIN-SUFFIX,index8.cn,REJECT
 DOMAIN-SUFFIX,ingameads.gameloft.com,REJECT
@@ -1250,15 +1263,12 @@ DOMAIN-SUFFIX,joyslink.com,REJECT
 DOMAIN-SUFFIX,js.revsci.net,REJECT
 DOMAIN-SUFFIX,js-agent.newrelic.com,REJECT
 DOMAIN-SUFFIX,juejdkio.com,REJECT
-DOMAIN-SUFFIX,jump.luna.58.com,REJECT
 DOMAIN-SUFFIX,jusha.com,REJECT
 DOMAIN-SUFFIX,jxwcbf.com,REJECT
 DOMAIN-SUFFIX,jzm81.com,REJECT
 DOMAIN-SUFFIX,jzv1.com,REJECT
 DOMAIN-SUFFIX,kdatacenter.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
-DOMAIN-SUFFIX,kepler.jd.com,REJECT
-DOMAIN-SUFFIX,keplerapi.jd.com,REJECT
 DOMAIN-SUFFIX,keyrun.cn,REJECT
 DOMAIN-SUFFIX,keytui.com,REJECT
 DOMAIN-SUFFIX,ktplay.cn,REJECT
@@ -1334,10 +1344,12 @@ DOMAIN-SUFFIX,padsdel.com,REJECT
 DOMAIN-SUFFIX,pailady.com,REJECT
 DOMAIN-SUFFIX,pcookie.mlt01.com,REJECT
 DOMAIN-SUFFIX,pd.brand.sogou.com,REJECT
+DOMAIN-SUFFIX,pingshetrip.com,REJECT
 DOMAIN-SUFFIX,pixel.wp.com,REJECT
 DOMAIN-SUFFIX,playnimei.cn,REJECT
 DOMAIN-SUFFIX,po.funshion.com,REJECT
 DOMAIN-SUFFIX,policy.jd.cm,REJECT
+DOMAIN-SUFFIX,ppjia55.com,REJECT
 DOMAIN-SUFFIX,pro.cn,REJECT
 DOMAIN-SUFFIX,profile.ams50.cloudfront.net,REJECT
 DOMAIN-SUFFIX,pubnative.net,REJECT
@@ -1364,7 +1376,6 @@ DOMAIN-SUFFIX,rwq.youle55.com,REJECT
 DOMAIN-SUFFIX,s.cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,scorecardresearch.com,REJECT
 DOMAIN-SUFFIX,serving-sys.com,REJECT
-DOMAIN-SUFFIX,shared.youdao.com,REJECT
 DOMAIN-SUFFIX,show.58dtpf.com,REJECT
 DOMAIN-SUFFIX,show.pipi7788.com,REJECT
 DOMAIN-SUFFIX,show.xiazai8844.net,REJECT
@@ -1383,11 +1394,9 @@ DOMAIN-SUFFIX,sspsky.com,REJECT
 DOMAIN-SUFFIX,stat.10jqka.com.cn,REJECT
 DOMAIN-SUFFIX,stat.funshion.net,REJECT
 DOMAIN-SUFFIX,stat.it168.com,REJECT
-DOMAIN-SUFFIX,stat.tudou.com,REJECT
 DOMAIN-SUFFIX,static.applifier.com,REJECT
 DOMAIN-SUFFIX,static1.bfdcdn.com,REJECT
 DOMAIN-SUFFIX,statics.motu.pagechoice.net,REJECT
-DOMAIN-SUFFIX,stats.tudou.com,REJECT
 DOMAIN-SUFFIX,supersonicads.com,REJECT
 DOMAIN-SUFFIX,supersonicads-a.akamaihd.net,REJECT
 DOMAIN-SUFFIX,sykty.com,REJECT
@@ -1442,7 +1451,6 @@ DOMAIN-SUFFIX,wrating.com,REJECT
 DOMAIN-SUFFIX,wt.39.net,REJECT
 DOMAIN-SUFFIX,wuxian.fd.zol-img.com.cn,REJECT
 DOMAIN-SUFFIX,wzjmr.com,REJECT
-DOMAIN-SUFFIX,xiaoyun.com,REJECT
 DOMAIN-SUFFIX,xiaoyunwifi.cn,REJECT
 DOMAIN-SUFFIX,xihuan8.cn,REJECT
 DOMAIN-SUFFIX,xihuanba.cn,REJECT
@@ -1479,7 +1487,7 @@ DOMAIN-SUFFIX,zzrcz.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-04-23 22:32:48
+// updated on 2017-05-04 09:20:11
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -1607,6 +1615,7 @@ DOMAIN-SUFFIX,radiko.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ramcity.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rdio.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,riseup.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sadistic-v.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,search.xxx,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shutterstock.com,Proxy,force-remote-dns
@@ -1893,6 +1902,8 @@ DOMAIN-SUFFIX,google.am,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.at,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.az,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.ba,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.be,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.bg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.cat,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.cd,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.ci,Proxy,force-remote-dns
@@ -2088,6 +2099,7 @@ DOMAIN-SUFFIX,7capture.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,7cow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,8-d.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85cc.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,85cc.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85st.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,881903.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,888.com,Proxy,force-remote-dns
@@ -2205,6 +2217,7 @@ DOMAIN-SUFFIX,animecrazy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,animeshippuuden.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,aniscartujo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,anobii.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,anonymise.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,anonymitynetwork.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,anonymizer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,anontext.com,Proxy,force-remote-dns
@@ -3121,6 +3134,7 @@ DOMAIN-SUFFIX,fanswong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanyue.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,farwestchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,en.favotter.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nytimes.map.fastly.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fast.wistia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fastssh.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faststone.org,Proxy,force-remote-dns
@@ -3336,6 +3350,7 @@ DOMAIN-SUFFIX,geek-art.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geekerhome.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geekheart.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geekmanuals.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gekikame.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gelbooru.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geocities.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geocities.com,Proxy,force-remote-dns
@@ -3636,6 +3651,7 @@ DOMAIN-SUFFIX,hongkongfp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongmeimei.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongzhi.li,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hootsuite.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hopedialogue.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hopto.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hornygamer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotav.tv,Proxy,force-remote-dns
@@ -3988,6 +4004,7 @@ DOMAIN-SUFFIX,kobobooks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kodingen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kompozer.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,konachan.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kone.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koolsolutions.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koornk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koranmandarin.com,Proxy,force-remote-dns
@@ -4477,6 +4494,7 @@ DOMAIN-SUFFIX,nubiles.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuexpo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nukistream.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nurgo-software.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nutaku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuvid.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuzcom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nvquan.org,Proxy,force-remote-dns
@@ -4486,6 +4504,10 @@ DOMAIN-SUFFIX,nyaa.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nydus.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nylon-angel.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nylonstockingsonline.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,a1.nyt.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,int.nyt.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,static01.nyt.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,typeface.nyt.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytcn.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytco.com,Proxy,force-remote-dns
@@ -5180,6 +5202,7 @@ DOMAIN-SUFFIX,ssglobal.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssh91.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sspro.ml,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sss.camp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sstmlt.moe,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sstmlt.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stackoverflow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stage64.hk,Proxy,force-remote-dns
@@ -5239,6 +5262,7 @@ DOMAIN-SUFFIX,sunta.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sunvpn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,suoluo.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,supervpn.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,suppig.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,suprememastertv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,surfeasy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,surfeasy.com.au,Proxy,force-remote-dns
@@ -5958,6 +5982,7 @@ DOMAIN-SUFFIX,whotalking.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whylover.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whyx.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,evchk.wikia.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fq.wikia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.uncyclopedia.wikia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zh.uncyclopedia.wikia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wikileaks.ch,Proxy,force-remote-dns
@@ -6004,6 +6029,7 @@ DOMAIN-SUFFIX,woeser.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woesermiddle-way.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wokar.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wolfax.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,woolyss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woopie.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woopie.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,workatruna.com,Proxy,force-remote-dns
