--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -27,7 +27,7 @@ IP-CIDR, 17.0.0.0/8, DIRECT, no-resolve
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-04-23 22:32:49
+// updated on 2017-05-04 09:20:12
 
 DOMAIN-SUFFIX,ad.video.51togic.com,REJECT
 DOMAIN-SUFFIX,shrek.6.cn,REJECT
@@ -55,6 +55,8 @@ DOMAIN-SUFFIX,dc.letv.com,REJECT
 DOMAIN-SUFFIX,dev.dc.letv.com,REJECT
 DOMAIN-SUFFIX,fz.letv.com,REJECT
 DOMAIN-SUFFIX,g3.letv.com,REJECT
+DOMAIN-SUFFIX,letv.allyes.com,REJECT
+DOMAIN-SUFFIX,letv.irs01.com,REJECT
 DOMAIN-SUFFIX,minisite.letv.com,REJECT
 DOMAIN-SUFFIX,msg.m.letv.com,REJECT
 DOMAIN-SUFFIX,n.mark.letv.com,REJECT
@@ -94,20 +96,31 @@ DOMAIN-SUFFIX,biz5.kankan.com,REJECT
 DOMAIN-SUFFIX,float.kankan.com,REJECT
 DOMAIN-SUFFIX,logic.cpm.cm.kankan.com,REJECT
 DOMAIN-SUFFIX,actives.youku.com,REJECT
+DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.api.3g.youku.com,REJECT
 DOMAIN-SUFFIX,ad.mobile.youku.com,REJECT
+DOMAIN-SUFFIX,adcontrol.tudou.com,REJECT
+DOMAIN-SUFFIX,adplay.tudou.com,REJECT
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN-SUFFIX,c.yes.youku.com,REJECT
+DOMAIN-SUFFIX,e.stat.ykimg.com,REJECT
+DOMAIN-SUFFIX,hudong.pl.youku.com,REJECT
+DOMAIN-SUFFIX,hz.youku.com,REJECT
 DOMAIN-SUFFIX,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,l.youku.com,REJECT
 DOMAIN-SUFFIX,lstat.youku.com,REJECT
 DOMAIN-SUFFIX,lvip.youku.com,REJECT
+DOMAIN-SUFFIX,msg.youku.com,REJECT
 DOMAIN-SUFFIX,p.l.ykimg.com,REJECT
 DOMAIN-SUFFIX,p.l.youku.com,REJECT
 DOMAIN-SUFFIX,p-log.ykimg.com,REJECT
 DOMAIN-SUFFIX,r.l.youku.com,REJECT
+DOMAIN-SUFFIX,stat.tudou.com,REJECT
 DOMAIN-SUFFIX,stat.youku.com,REJECT
 DOMAIN-SUFFIX,static.lstat.youku.com,REJECT
+DOMAIN-SUFFIX,stats.tudou.com,REJECT
+DOMAIN-SUFFIX,v.l.youku.com,REJECT
+DOMAIN-SUFFIX,ykatr.youku.com,REJECT
 DOMAIN-SUFFIX,ads.youtube.com,REJECT
 DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
 DOMAIN-SUFFIX,couchcoaster.jp,REJECT
@@ -157,6 +170,7 @@ DOMAIN-SUFFIX,analytics.hz.netease.com,REJECT
 DOMAIN-SUFFIX,analytics.ws.126.net,REJECT
 DOMAIN-SUFFIX,b.bst.126.net,REJECT
 DOMAIN-SUFFIX,bobo.163.com,REJECT
+DOMAIN-SUFFIX,c.youdao.com,REJECT
 DOMAIN-SUFFIX,clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,conv.youdao.com,REJECT
 DOMAIN-SUFFIX,crashlytics.163.com,REJECT
@@ -170,7 +184,6 @@ DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
 DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
-DOMAIN-SUFFIX,impservice-test.dictapp.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dict.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictapp.youdao.com,REJECT
@@ -178,7 +191,9 @@ DOMAIN-SUFFIX,impservice.dictvista.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictweb.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.dictword.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice.mail.youdao.com,REJECT
+DOMAIN-SUFFIX,impservice.union.youdao.com,REJECT
 DOMAIN-SUFFIX,impservice2.youdao.com,REJECT
+DOMAIN-SUFFIX,impservicetest.dictapp.youdao.com,REJECT
 DOMAIN-SUFFIX,ir.mail.163.com,REJECT
 DOMAIN-SUFFIX,irpmt.mail.163.com,REJECT
 DOMAIN-SUFFIX,mimg.126.net,REJECT
@@ -196,6 +211,7 @@ DOMAIN-SUFFIX,qt002x.corp.youdao.com,REJECT
 DOMAIN-SUFFIX,r.mail.163.com,REJECT
 DOMAIN-SUFFIX,rd.da.netease.com,REJECT
 DOMAIN-SUFFIX,rlogs.youdao.com,REJECT
+DOMAIN-SUFFIX,shared.youdao.com,REJECT
 DOMAIN-SUFFIX,stat.ws.126.net,REJECT
 DOMAIN-SUFFIX,static.flv.uuzuonline.com,REJECT
 DOMAIN-SUFFIX,statis.push.netease.com,REJECT
@@ -261,6 +277,7 @@ DOMAIN-SUFFIX,58.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,brandshow.58.com,REJECT
 DOMAIN-SUFFIX,imp.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,jing.58.com,REJECT
+DOMAIN-SUFFIX,jump.luna.58.com,REJECT
 DOMAIN-SUFFIX,stat.xgo.com.cn,REJECT
 DOMAIN-SUFFIX,track.58.com,REJECT
 DOMAIN-SUFFIX,adhome.1fangchan.com,REJECT
@@ -960,7 +977,6 @@ DOMAIN-SUFFIX,95105012.com,REJECT
 DOMAIN-SUFFIX,990km.com,REJECT
 DOMAIN-SUFFIX,aac-dmp.cn,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
-DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.thsi.cn,REJECT
 DOMAIN-SUFFIX,ad.unimhk.com,REJECT
 DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
@@ -971,7 +987,6 @@ DOMAIN-SUFFIX,adcdn.hatena.ne.jp,REJECT
 DOMAIN-SUFFIX,adchina.com,REJECT
 DOMAIN-SUFFIX,adcolony.com,REJECT
 DOMAIN-SUFFIX,adcome.cn,REJECT
-DOMAIN-SUFFIX,adcontrol.tudou.com,REJECT
 DOMAIN-SUFFIX,adeventtracker.spotify.com,REJECT
 DOMAIN-SUFFIX,adhouyi.com,REJECT
 DOMAIN-SUFFIX,adinall.com,REJECT
@@ -991,7 +1006,6 @@ DOMAIN-SUFFIX,admx.baixing.com,REJECT
 DOMAIN-SUFFIX,adnetworkperformance.com,REJECT
 DOMAIN-SUFFIX,adnxs.com,REJECT
 DOMAIN-SUFFIX,adofthyear.com,REJECT
-DOMAIN-SUFFIX,adplay.tudou.com,REJECT
 DOMAIN-SUFFIX,ad-plus.cn,REJECT
 DOMAIN-SUFFIX,adpro.cn,REJECT
 DOMAIN-SUFFIX,adroll.com,REJECT
@@ -1027,7 +1041,6 @@ DOMAIN-SUFFIX,all.rising.com.cn,REJECT
 DOMAIN-SUFFIX,alllget.com,REJECT
 DOMAIN-SUFFIX,allyes.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,ampproject.org,REJECT
 DOMAIN-SUFFIX,analytics.163.com,REJECT
 DOMAIN-SUFFIX,analytics.techweb.com.cn,REJECT
 DOMAIN-SUFFIX,analytics-union.xunlei.com,REJECT
@@ -1071,7 +1084,6 @@ DOMAIN-SUFFIX,bs.da.hunantv.com,REJECT
 DOMAIN-SUFFIX,bxb.oupeng.com,REJECT
 DOMAIN-SUFFIX,bytedance.com,REJECT
 DOMAIN-SUFFIX,c.ns8d.com,REJECT
-DOMAIN-SUFFIX,c.youdao.com,REJECT
 DOMAIN-SUFFIX,c0563.com,REJECT
 DOMAIN-SUFFIX,c5.72zx.com,REJECT
 DOMAIN-SUFFIX,capp.simsimi.com,REJECT
@@ -1091,8 +1103,7 @@ DOMAIN-SUFFIX,cmcm.com,REJECT
 DOMAIN-SUFFIX,cmcore.com,REJECT
 DOMAIN-SUFFIX,cms.laifeng.com,REJECT
 DOMAIN-SUFFIX,cn.wifi.com,REJECT
-DOMAIN-SUFFIX,cnzz.com,REJECT
-DOMAIN-SUFFIX,cnzz.net,REJECT
+DOMAIN-SUFFIX,cnzzlink.com,REJECT
 DOMAIN-SUFFIX,cocounion.com,REJECT
 DOMAIN-SUFFIX,collect.tianya.cn,REJECT
 DOMAIN-SUFFIX,colorfulapp.com,REJECT
@@ -1111,6 +1122,7 @@ DOMAIN-SUFFIX,cps.laifeng.com,REJECT
 DOMAIN-SUFFIX,csbew.com,REJECT
 DOMAIN-SUFFIX,ctsywy.com,REJECT
 DOMAIN-SUFFIX,cywl5.com,REJECT
+DOMAIN-SUFFIX,czxiangyue.com,REJECT
 DOMAIN-SUFFIX,d31qbv1cthcecs.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d3rt1990lpmkn.cloudfront.com,REJECT
 DOMAIN-SUFFIX,dap.gentags.net,REJECT
@@ -1149,6 +1161,7 @@ DOMAIN-SUFFIX,file.ws.126.net,REJECT
 DOMAIN-SUFFIX,findjapan.cn,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,forjs.net,REJECT
+DOMAIN-SUFFIX,fqtra.com,REJECT
 DOMAIN-SUFFIX,fsf.org,REJECT
 DOMAIN-SUFFIX,fugetech.com,REJECT
 DOMAIN-SUFFIX,g.q4ik.com,REJECT
@@ -1185,6 +1198,7 @@ DOMAIN-SUFFIX,huimee.net,REJECT
 DOMAIN-SUFFIX,hwcdn.net,REJECT
 DOMAIN-SUFFIX,hxadt.com,REJECT
 DOMAIN-SUFFIX,hxsame.hexun.com,REJECT
+DOMAIN-SUFFIX,hxspc.com,REJECT
 DOMAIN-SUFFIX,hytgj.com,REJECT
 DOMAIN-SUFFIX,hzkcbs.com,REJECT
 DOMAIN-SUFFIX,i8.com.cn,REJECT
@@ -1212,7 +1226,6 @@ DOMAIN-SUFFIX,img.ujian.cc,REJECT
 DOMAIN-SUFFIX,immob.cn,REJECT
 DOMAIN-SUFFIX,imochy.com,REJECT
 DOMAIN-SUFFIX,impact.applifier.com,REJECT
-DOMAIN-SUFFIX,impservice.union.youdao.com,REJECT
 DOMAIN-SUFFIX,im-x.jd.com,REJECT
 DOMAIN-SUFFIX,index8.cn,REJECT
 DOMAIN-SUFFIX,ingameads.gameloft.com,REJECT
@@ -1243,15 +1256,12 @@ DOMAIN-SUFFIX,joyslink.com,REJECT
 DOMAIN-SUFFIX,js.revsci.net,REJECT
 DOMAIN-SUFFIX,js-agent.newrelic.com,REJECT
 DOMAIN-SUFFIX,juejdkio.com,REJECT
-DOMAIN-SUFFIX,jump.luna.58.com,REJECT
 DOMAIN-SUFFIX,jusha.com,REJECT
 DOMAIN-SUFFIX,jxwcbf.com,REJECT
 DOMAIN-SUFFIX,jzm81.com,REJECT
 DOMAIN-SUFFIX,jzv1.com,REJECT
 DOMAIN-SUFFIX,kdatacenter.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
-DOMAIN-SUFFIX,kepler.jd.com,REJECT
-DOMAIN-SUFFIX,keplerapi.jd.com,REJECT
 DOMAIN-SUFFIX,keyrun.cn,REJECT
 DOMAIN-SUFFIX,keytui.com,REJECT
 DOMAIN-SUFFIX,ktplay.cn,REJECT
@@ -1327,10 +1337,12 @@ DOMAIN-SUFFIX,padsdel.com,REJECT
 DOMAIN-SUFFIX,pailady.com,REJECT
 DOMAIN-SUFFIX,pcookie.mlt01.com,REJECT
 DOMAIN-SUFFIX,pd.brand.sogou.com,REJECT
+DOMAIN-SUFFIX,pingshetrip.com,REJECT
 DOMAIN-SUFFIX,pixel.wp.com,REJECT
 DOMAIN-SUFFIX,playnimei.cn,REJECT
 DOMAIN-SUFFIX,po.funshion.com,REJECT
 DOMAIN-SUFFIX,policy.jd.cm,REJECT
+DOMAIN-SUFFIX,ppjia55.com,REJECT
 DOMAIN-SUFFIX,pro.cn,REJECT
 DOMAIN-SUFFIX,profile.ams50.cloudfront.net,REJECT
 DOMAIN-SUFFIX,pubnative.net,REJECT
@@ -1357,7 +1369,6 @@ DOMAIN-SUFFIX,rwq.youle55.com,REJECT
 DOMAIN-SUFFIX,s.cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,scorecardresearch.com,REJECT
 DOMAIN-SUFFIX,serving-sys.com,REJECT
-DOMAIN-SUFFIX,shared.youdao.com,REJECT
 DOMAIN-SUFFIX,show.58dtpf.com,REJECT
 DOMAIN-SUFFIX,show.pipi7788.com,REJECT
 DOMAIN-SUFFIX,show.xiazai8844.net,REJECT
@@ -1376,11 +1387,9 @@ DOMAIN-SUFFIX,sspsky.com,REJECT
 DOMAIN-SUFFIX,stat.10jqka.com.cn,REJECT
 DOMAIN-SUFFIX,stat.funshion.net,REJECT
 DOMAIN-SUFFIX,stat.it168.com,REJECT
-DOMAIN-SUFFIX,stat.tudou.com,REJECT
 DOMAIN-SUFFIX,static.applifier.com,REJECT
 DOMAIN-SUFFIX,static1.bfdcdn.com,REJECT
 DOMAIN-SUFFIX,statics.motu.pagechoice.net,REJECT
-DOMAIN-SUFFIX,stats.tudou.com,REJECT
 DOMAIN-SUFFIX,supersonicads.com,REJECT
 DOMAIN-SUFFIX,supersonicads-a.akamaihd.net,REJECT
 DOMAIN-SUFFIX,sykty.com,REJECT
@@ -1435,7 +1444,6 @@ DOMAIN-SUFFIX,wrating.com,REJECT
 DOMAIN-SUFFIX,wt.39.net,REJECT
 DOMAIN-SUFFIX,wuxian.fd.zol-img.com.cn,REJECT
 DOMAIN-SUFFIX,wzjmr.com,REJECT
-DOMAIN-SUFFIX,xiaoyun.com,REJECT
 DOMAIN-SUFFIX,xiaoyunwifi.cn,REJECT
 DOMAIN-SUFFIX,xihuan8.cn,REJECT
 DOMAIN-SUFFIX,xihuanba.cn,REJECT
@@ -1473,7 +1481,7 @@ DOMAIN-SUFFIX,zzrcz.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-04-23 22:33:00
+// updated on 2017-05-04 09:20:17
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -2432,6 +2440,7 @@ DOMAIN-SUFFIX,126xz.com,ChinaProxy
 DOMAIN-SUFFIX,127.net,ChinaProxy
 DOMAIN-SUFFIX,12799.com,ChinaProxy
 DOMAIN-SUFFIX,127v.com,ChinaProxy
+DOMAIN-SUFFIX,127xx.com,ChinaProxy
 DOMAIN-SUFFIX,1288.tv,ChinaProxy
 DOMAIN-SUFFIX,128qd.com,ChinaProxy
 DOMAIN-SUFFIX,128uu.com,ChinaProxy
@@ -2859,7 +2868,9 @@ DOMAIN-SUFFIX,186it.com,ChinaProxy
 DOMAIN-SUFFIX,186pet.com,ChinaProxy
 DOMAIN-SUFFIX,1872.net,ChinaProxy
 DOMAIN-SUFFIX,188.com,ChinaProxy
+DOMAIN-SUFFIX,1885888.com,ChinaProxy
 DOMAIN-SUFFIX,188bifen.com,ChinaProxy
+DOMAIN-SUFFIX,188cf.net,ChinaProxy
 DOMAIN-SUFFIX,188cyw.com,ChinaProxy
 DOMAIN-SUFFIX,188hi.com,ChinaProxy
 DOMAIN-SUFFIX,188lanxi.com,ChinaProxy
@@ -3541,6 +3552,7 @@ DOMAIN-SUFFIX,31xjd.com,ChinaProxy
 DOMAIN-SUFFIX,31yj.com,ChinaProxy
 DOMAIN-SUFFIX,31zscl.com,ChinaProxy
 DOMAIN-SUFFIX,320106.com,ChinaProxy
+DOMAIN-SUFFIX,32055.net,ChinaProxy
 DOMAIN-SUFFIX,3207.com,ChinaProxy
 DOMAIN-SUFFIX,3208.net,ChinaProxy
 DOMAIN-SUFFIX,320921.com,ChinaProxy
@@ -8421,6 +8433,7 @@ DOMAIN-SUFFIX,b58b.com,ChinaProxy
 DOMAIN-SUFFIX,b5m.com,ChinaProxy
 DOMAIN-SUFFIX,b5mcdn.com,ChinaProxy
 DOMAIN-SUFFIX,b6wp.com,ChinaProxy
+DOMAIN-SUFFIX,b8yz.com,ChinaProxy
 DOMAIN-SUFFIX,b9377h.com,ChinaProxy
 DOMAIN-SUFFIX,16.com,ChinaProxy
 DOMAIN-SUFFIX,li.com,ChinaProxy
@@ -12425,6 +12438,7 @@ DOMAIN-SUFFIX,coolpad.com,ChinaProxy
 DOMAIN-SUFFIX,coolrar.com,ChinaProxy
 DOMAIN-SUFFIX,coolsc.net,ChinaProxy
 DOMAIN-SUFFIX,coolsrv.com,ChinaProxy
+DOMAIN-SUFFIX,coolwarmsy.com,ChinaProxy
 DOMAIN-SUFFIX,coolwp.com,ChinaProxy
 DOMAIN-SUFFIX,coolxap.com,ChinaProxy
 DOMAIN-SUFFIX,coolyun.com,ChinaProxy
@@ -12740,6 +12754,7 @@ DOMAIN-SUFFIX,ct108.com,ChinaProxy
 DOMAIN-SUFFIX,ct597.com,ChinaProxy
 DOMAIN-SUFFIX,ctags.net,ChinaProxy
 DOMAIN-SUFFIX,ctaoci.com,ChinaProxy
+DOMAIN-SUFFIX,ctcdns.com,ChinaProxy
 DOMAIN-SUFFIX,ctcefive.com,ChinaProxy
 DOMAIN-SUFFIX,ctcnn.com,ChinaProxy
 DOMAIN-SUFFIX,ctcwri.org,ChinaProxy
@@ -14697,6 +14712,7 @@ DOMAIN-SUFFIX,easyaq.com,ChinaProxy
 DOMAIN-SUFFIX,easyaq.org,ChinaProxy
 DOMAIN-SUFFIX,easybug.org,ChinaProxy
 DOMAIN-SUFFIX,easyfang.com,ChinaProxy
+DOMAIN-SUFFIX,easygametime.com,ChinaProxy
 DOMAIN-SUFFIX,easyhin.com,ChinaProxy
 DOMAIN-SUFFIX,easyhoo.net,ChinaProxy
 DOMAIN-SUFFIX,easyicon.net,ChinaProxy
@@ -17548,6 +17564,7 @@ DOMAIN-SUFFIX,legend.com,ChinaProxy
 DOMAIN-SUFFIX,share.com,ChinaProxy
 DOMAIN-SUFFIX,h515.net,ChinaProxy
 DOMAIN-SUFFIX,h5abc.com,ChinaProxy
+DOMAIN-SUFFIX,h5avu.com,ChinaProxy
 DOMAIN-SUFFIX,h5data.com,ChinaProxy
 DOMAIN-SUFFIX,h5gal.net,ChinaProxy
 DOMAIN-SUFFIX,h5jun.com,ChinaProxy
@@ -18863,6 +18880,7 @@ DOMAIN-SUFFIX,cache.com,ChinaProxy
 DOMAIN-SUFFIX,httpac.com,ChinaProxy
 DOMAIN-SUFFIX,httpcn.com,ChinaProxy
 DOMAIN-SUFFIX,htwbb.com,ChinaProxy
+DOMAIN-SUFFIX,htwed.com,ChinaProxy
 DOMAIN-SUFFIX,hty.cc,ChinaProxy
 DOMAIN-SUFFIX,htyou.com,ChinaProxy
 DOMAIN-SUFFIX,htysw.net,ChinaProxy
@@ -21780,6 +21798,7 @@ DOMAIN-SUFFIX,jy135.com,ChinaProxy
 DOMAIN-SUFFIX,jyacht.com,ChinaProxy
 DOMAIN-SUFFIX,jyamoy.com,ChinaProxy
 DOMAIN-SUFFIX,jybajun.com,ChinaProxy
+DOMAIN-SUFFIX,jyblife.com,ChinaProxy
 DOMAIN-SUFFIX,jyblp.com,ChinaProxy
 DOMAIN-SUFFIX,jyboke.com,ChinaProxy
 DOMAIN-SUFFIX,jybysoft.com,ChinaProxy
@@ -25172,6 +25191,7 @@ DOMAIN-SUFFIX,morningwhistle.com,ChinaProxy
 DOMAIN-SUFFIX,morobat.com,ChinaProxy
 DOMAIN-SUFFIX,morz.org,ChinaProxy
 DOMAIN-SUFFIX,moshou.com,ChinaProxy
+DOMAIN-SUFFIX,moshuqiqiu.com,ChinaProxy
 DOMAIN-SUFFIX,mosifel.com,ChinaProxy
 DOMAIN-SUFFIX,mosusu.com,ChinaProxy
 DOMAIN-SUFFIX,motie.com,ChinaProxy
@@ -26945,6 +26965,8 @@ DOMAIN-SUFFIX,jia.net,ChinaProxy
 DOMAIN-SUFFIX,qu.com,ChinaProxy
 DOMAIN-SUFFIX,pingan.com,ChinaProxy
 DOMAIN-SUFFIX,pingan.com,ChinaProxy
+DOMAIN-SUFFIX,pinganad.com,ChinaProxy
+DOMAIN-SUFFIX,pingancdn.com,ChinaProxy
 DOMAIN-SUFFIX,pinganfang.com,ChinaProxy
 DOMAIN-SUFFIX,pinganhd.com,ChinaProxy
 DOMAIN-SUFFIX,pingcegu.com,ChinaProxy
@@ -27473,6 +27495,7 @@ DOMAIN-SUFFIX,qhea.com,ChinaProxy
 DOMAIN-SUFFIX,qhfax.com,ChinaProxy
 DOMAIN-SUFFIX,qhgy.net,ChinaProxy
 DOMAIN-SUFFIX,qhimg.com,ChinaProxy
+DOMAIN-SUFFIX,qhimgs4.com,ChinaProxy
 DOMAIN-SUFFIX,qhkyfund.com,ChinaProxy
 DOMAIN-SUFFIX,qhlhfund.com,ChinaProxy
 DOMAIN-SUFFIX,qhlingwang.com,ChinaProxy
@@ -27493,6 +27516,7 @@ DOMAIN-SUFFIX,qhwmw.com,ChinaProxy
 DOMAIN-SUFFIX,qhwwd.com,ChinaProxy
 DOMAIN-SUFFIX,qhyedu.com,ChinaProxy
 DOMAIN-SUFFIX,che.com,ChinaProxy
+DOMAIN-SUFFIX,wen.com,ChinaProxy
 DOMAIN-SUFFIX,qiak.com,ChinaProxy
 DOMAIN-SUFFIX,qian10.net,ChinaProxy
 DOMAIN-SUFFIX,qianbao666.com,ChinaProxy
@@ -27669,6 +27693,7 @@ DOMAIN-SUFFIX,qingpingtec.com,ChinaProxy
 DOMAIN-SUFFIX,qingpinji.com,ChinaProxy
 DOMAIN-SUFFIX,qingrenw.com,ChinaProxy
 DOMAIN-SUFFIX,qingsongchou.com,ChinaProxy
+DOMAIN-SUFFIX,qingstor.com,ChinaProxy
 DOMAIN-SUFFIX,qingtiancms.net,ChinaProxy
 DOMAIN-SUFFIX,qingtin.com,ChinaProxy
 DOMAIN-SUFFIX,qingting.fm,ChinaProxy
@@ -27727,6 +27752,7 @@ DOMAIN-SUFFIX,qiquwang.com,ChinaProxy
 DOMAIN-SUFFIX,qiquwu.com,ChinaProxy
 DOMAIN-SUFFIX,qire123.com,ChinaProxy
 DOMAIN-SUFFIX,qiredy.com,ChinaProxy
+DOMAIN-SUFFIX,qiruimaoyi.com,ChinaProxy
 DOMAIN-SUFFIX,qisbook.com,ChinaProxy
 DOMAIN-SUFFIX,qisool.com,ChinaProxy
 DOMAIN-SUFFIX,qisuu.com,ChinaProxy
@@ -29043,6 +29069,7 @@ DOMAIN-SUFFIX,sewzm.com,ChinaProxy
 DOMAIN-SUFFIX,sex618.org,ChinaProxy
 DOMAIN-SUFFIX,card.com,ChinaProxy
 DOMAIN-SUFFIX,express.com,ChinaProxy
+DOMAIN-SUFFIX,financial.com,ChinaProxy
 DOMAIN-SUFFIX,pay.com,ChinaProxy
 DOMAIN-SUFFIX,sf.gg,ChinaProxy
 DOMAIN-SUFFIX,sf119.net,ChinaProxy
@@ -29656,6 +29683,7 @@ DOMAIN-SUFFIX,shuosanguo.com,ChinaProxy
 DOMAIN-SUFFIX,shuoshuokong.com,ChinaProxy
 DOMAIN-SUFFIX,shuoyao.net,ChinaProxy
 DOMAIN-SUFFIX,shuping5.com,ChinaProxy
+DOMAIN-SUFFIX,shuqireader.com,ChinaProxy
 DOMAIN-SUFFIX,shurenbang.net,ChinaProxy
 DOMAIN-SUFFIX,shurenyun.com,ChinaProxy
 DOMAIN-SUFFIX,shushao.com,ChinaProxy
@@ -29687,6 +29715,7 @@ DOMAIN-SUFFIX,shyfci.com,ChinaProxy
 DOMAIN-SUFFIX,shygc.net,ChinaProxy
 DOMAIN-SUFFIX,shyishi.com,ChinaProxy
 DOMAIN-SUFFIX,shyjad.com,ChinaProxy
+DOMAIN-SUFFIX,shyouai.com,ChinaProxy
 DOMAIN-SUFFIX,shyuzhai.com,ChinaProxy
 DOMAIN-SUFFIX,shyxwz.com,ChinaProxy
 DOMAIN-SUFFIX,shzbh.com,ChinaProxy
@@ -30057,6 +30086,7 @@ DOMAIN-SUFFIX,social.xboxlive,ChinaProxy
 DOMAIN-SUFFIX,socialark.net,ChinaProxy
 DOMAIN-SUFFIX,socialbeta.com,ChinaProxy
 DOMAIN-SUFFIX,socialfishface.com,ChinaProxy
+DOMAIN-SUFFIX,socialjia.com,ChinaProxy
 DOMAIN-SUFFIX,socomic.com,ChinaProxy
 DOMAIN-SUFFIX,sodao.com,ChinaProxy
 DOMAIN-SUFFIX,sodu.cc,ChinaProxy
@@ -32614,6 +32644,7 @@ DOMAIN-SUFFIX,uuzoom.com,ChinaProxy
 DOMAIN-SUFFIX,uuzu.com,ChinaProxy
 DOMAIN-SUFFIX,uuzuonline.com,ChinaProxy
 DOMAIN-SUFFIX,uuzuonline.net,ChinaProxy
+DOMAIN-SUFFIX,uuzz.com,ChinaProxy
 DOMAIN-SUFFIX,uvclicks.com,ChinaProxy
 DOMAIN-SUFFIX,uvexperience.com,ChinaProxy
 DOMAIN-SUFFIX,uvov.com,ChinaProxy
@@ -33770,6 +33801,7 @@ DOMAIN-SUFFIX,whjcbus.com,ChinaProxy
 DOMAIN-SUFFIX,whjddc.com,ChinaProxy
 DOMAIN-SUFFIX,whjdhy.com,ChinaProxy
 DOMAIN-SUFFIX,whjfz.com,ChinaProxy
+DOMAIN-SUFFIX,whjhcz.com,ChinaProxy
 DOMAIN-SUFFIX,whjjyyjsb.com,ChinaProxy
 DOMAIN-SUFFIX,whjm.com,ChinaProxy
 DOMAIN-SUFFIX,whjmyc.com,ChinaProxy
@@ -34442,6 +34474,7 @@ DOMAIN-SUFFIX,wyr.me,ChinaProxy
 DOMAIN-SUFFIX,wyrj.com,ChinaProxy
 DOMAIN-SUFFIX,wys.me,ChinaProxy
 DOMAIN-SUFFIX,wysap.com,ChinaProxy
+DOMAIN-SUFFIX,wytz9.com,ChinaProxy
 DOMAIN-SUFFIX,wyunion.com,ChinaProxy
 DOMAIN-SUFFIX,wyx00.com,ChinaProxy
 DOMAIN-SUFFIX,wyzc.com,ChinaProxy
@@ -36488,6 +36521,7 @@ DOMAIN-SUFFIX,yonhow.com,ChinaProxy
 DOMAIN-SUFFIX,yonyou.com,ChinaProxy
 DOMAIN-SUFFIX,yonyoufinancial.com,ChinaProxy
 DOMAIN-SUFFIX,yonyouhit.com,ChinaProxy
+DOMAIN-SUFFIX,yoodoing.com,ChinaProxy
 DOMAIN-SUFFIX,yooek.com,ChinaProxy
 DOMAIN-SUFFIX,yoohouse.com,ChinaProxy
 DOMAIN-SUFFIX,yooli.com,ChinaProxy
@@ -37597,6 +37631,7 @@ DOMAIN-SUFFIX,zhaoyifangzhi.com,ChinaProxy
 DOMAIN-SUFFIX,zhaoyinqian.com,ChinaProxy
 DOMAIN-SUFFIX,zhaoyiou.com,ChinaProxy
 DOMAIN-SUFFIX,zhaoyun.com,ChinaProxy
+DOMAIN-SUFFIX,zhaozhexue.com,ChinaProxy
 DOMAIN-SUFFIX,zhaozhishi.com,ChinaProxy
 DOMAIN-SUFFIX,zhbit.com,ChinaProxy
 DOMAIN-SUFFIX,zhcf001.com,ChinaProxy
@@ -38429,6 +38464,7 @@ DOMAIN-SUFFIX,zxjsq.net,ChinaProxy
 DOMAIN-SUFFIX,zxsmd.com,ChinaProxy
 DOMAIN-SUFFIX,zxtang.com,ChinaProxy
 DOMAIN-SUFFIX,zxtjd.com,ChinaProxy
+DOMAIN-SUFFIX,zxtzx.com,ChinaProxy
 DOMAIN-SUFFIX,zxwyw.net,ChinaProxy
 DOMAIN-SUFFIX,zxxk.com,ChinaProxy
 DOMAIN-SUFFIX,zxxxkj.com,ChinaProxy
@@ -38508,6 +38544,7 @@ DOMAIN-SUFFIX,zzt9.com,ChinaProxy
 DOMAIN-SUFFIX,zzwhdq.com,ChinaProxy
 DOMAIN-SUFFIX,zzwljc.com,ChinaProxy
 DOMAIN-SUFFIX,zzwms.com,ChinaProxy
+DOMAIN-SUFFIX,zzwqqx.com,ChinaProxy
 DOMAIN-SUFFIX,zzxw.net,ChinaProxy
 DOMAIN-SUFFIX,zzxx.in,ChinaProxy
 DOMAIN-SUFFIX,zzydb.com,ChinaProxy
