--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -34,7 +34,7 @@ DOMAIN-SUFFIX,tw,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-05-15 01:26:13
+// updated on 2017-05-21 00:41:11
 
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
 DOMAIN-SUFFIX,afp.qiyi.com,REJECT
@@ -48,11 +48,6 @@ DOMAIN-SUFFIX,gamecenter.iqiyi.com,REJECT
 DOMAIN-SUFFIX,hotchat-im.iqiyi.com,REJECT
 DOMAIN-SUFFIX,ifacelog.iqiyi.com,REJECT
 DOMAIN-SUFFIX,mbdlog.iqiyi.com,REJECT
-DOMAIN-SUFFIX,paopao.iqiyi.com,REJECT
-DOMAIN-SUFFIX,paopao0.qiyipic.com,REJECT
-DOMAIN-SUFFIX,paopao1.qiyipic.com,REJECT
-DOMAIN-SUFFIX,paopao2.qiyipic.com,REJECT
-DOMAIN-SUFFIX,paopao3.qiyipic.com,REJECT
 DOMAIN-SUFFIX,policy.video.iqiyi.com,REJECT
 DOMAIN-SUFFIX,rcd.iqiyi.com,REJECT
 DOMAIN-SUFFIX,api.game.letvstore.com,REJECT
@@ -164,8 +159,6 @@ DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
 DOMAIN-SUFFIX,m-78.jp,REJECT
 DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
-DOMAIN-SUFFIX,s.youtube.com,REJECT
-DOMAIN-SUFFIX,s2.youtube.com,REJECT
 DOMAIN-SUFFIX,ssl-youtube.2cnt.net,REJECT
 DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
 DOMAIN-SUFFIX,youtube.2cnt.net,REJECT
@@ -469,7 +462,6 @@ DOMAIN-SUFFIX,simba.m.taobao.com,REJECT
 DOMAIN-SUFFIX,srd.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,stats.ipinyou.com,REJECT
 DOMAIN-SUFFIX,strip.taobaocdn.com,REJECT
-DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-SUFFIX,tanxlog.istreamsche.com,REJECT
 DOMAIN-SUFFIX,tejia.taobao.com,REJECT
 DOMAIN-SUFFIX,temai.taobao.com,REJECT
@@ -1258,7 +1250,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-05-15 01:26:12
+// updated on 2017-05-21 00:41:10
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -2781,6 +2773,7 @@ DOMAIN-SUFFIX,empfil.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emule-ed2k.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emulefans.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emuparadise.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,enanyang.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,enewstree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,enfal.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.engadget.com,Proxy,force-remote-dns
@@ -3135,6 +3128,7 @@ DOMAIN-SUFFIX,getcloak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getfoxyproxy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getfreedur.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getgom.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,geti2p.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getlantern.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getjetso.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getiton.com,Proxy,force-remote-dns
@@ -3408,6 +3402,7 @@ DOMAIN-SUFFIX,hkusu.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkvwet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkwcc.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkzone.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hmonghot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hnjhj.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hnntube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hola.com,Proxy,force-remote-dns
@@ -4269,6 +4264,7 @@ DOMAIN-SUFFIX,nutaku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuvid.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuzcom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nvquan.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nvtongzhisheng.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nwtca.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nyaa.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nyaa.se,Proxy,force-remote-dns
